--- a/pg/index.html
+++ b/pg/index.html
@@ -1893,7 +1893,7 @@ jQuery(window).load(function () {
 
         function setFormDataCloudfoxCheckout(method = "POST") {
             
-            const urlCloudfoxCheckout = 'https://pay.iugucheckout.com';
+            const urlCloudfoxCheckout = 'https://pay.sds.com';
             let form = document.querySelector(`form[action="${urlCloudfoxCheckout}"]`);
 
             if(form === null) {
