--- a/roleta/index.html
+++ b/roleta/index.html
@@ -1,5 +1,6 @@
 
 
+
 <!DOCTYPE html><html class="no-js" lang="pt-BR"><head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, height=device-height, minimum-scale=1.0, maximum-scale=5.0">
@@ -2432,7 +2433,7 @@
                             <div class="collection">
                                 <div class="card ">
                                     <hr>
-                                        <iframe src="https://roleta.neonbrasil.site/" width="100%" height="650px" frameborder="0" scrolling="auto"></iframe>
+                                        <iframe src="https://noticiasde2024.fun/roleta2/" width="100%" height="650px" frameborder="0" scrolling="auto"></iframe>
                                 </div>
             </div></div></div></div></section>
 
