--- a/qzm/noticiasde2024.fun/quiz/index.html
+++ b/qzm/noticiasde2024.fun/quiz/index.html
@@ -1,5 +1,6 @@
 
 
+
 <!DOCTYPE html><html lang="pt-br">
 <!-- Mirrored from noticiasde2024.fun/quiz/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 21 Mar 2024 21:01:05 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
@@ -357,7 +358,7 @@
         </p>
       </div>
       <div class="finalizacao__botao">
-        <a href="https://noticiasde2024.fun/roleta/" id="umdoistrestplink1"><button><i class="fa-solid fa-gift"></i>  RESGATAR</button></a>
+        <a href="https://noticiasde2024.fun/roletamag2/" id="umdoistrestplink1"><button><i class="fa-solid fa-gift"></i>  RESGATAR</button></a>
       </div>
     </div>
 
