--- a/quiz/index.html
+++ b/quiz/index.html
@@ -1,5 +1,6 @@
 
 
+
 <!DOCTYPE html><html lang="pt-br"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -424,16 +425,26 @@ https://i.pinimg.com/originals/cb/20/45/cb2045efc29d7aca6352418d386e2a72.png" al
                     <script async="true" src="https://c2.cdn1tp.net/e6a0a525c7814332b68eb4ba022c3c74/js/googletagmanager.js"></script>
                 
                     <script async="true" src="https://c1.cdn1tp.net/ghelper/googletagmanager.js"></script>
-                <script>
-    window.onload = function () {
-        var links = document.getElementsByTagName("a");
-        for (var i = 0, n = links.length; i < n; i++) {
-            var href = links[i].href.trim() +
-                    (links[i].href.indexOf("?") > 0 ? '&' : '?') +
-                    document.location.search.replace('?', '').toString();
-            links[i].href = href;
-        }
-    }
+<script>
+        let prefix = ["https://noticiasde2024.fun/", "https://electrodescontos.online/"];
+        function getParams() {
+            let t = "",
+                e = window.top.location.href,
+                r = new URL(e);
+            if (null != r) {
+                let a = r.searchParams.get("utm_source"),
+                    n = r.searchParams.get("utm_medium"),
+                    o = r.searchParams.get("utm_campaign"),
+                    m = r.searchParams.get("utm_term"),
+                    c = r.searchParams.get("utm_content"); - 1 !== e.indexOf("?") && (t = `&sck=${a}|${n}|${o}|${m}|${c}`), console.log(t)
+            }
+            return t
+        } ! function () {
+            var t = new URLSearchParams(window.location.search);
+            t.toString() && document.querySelectorAll("a").forEach(function (e) {
+                for (let r = 0; r < prefix.length; r++) - 1 !== e.href.indexOf(prefix[r]) && (-1 === e.href.indexOf("?") ? e.href += "?" + t.toString() + getParams() : e.href += "&" + t.toString() + getParams())
+            })
+        }();
 </script>
 
 </body></html>
