--- a/ut/index.html
+++ b/ut/index.html
@@ -194,12 +194,13 @@
 
   // Ação do botão "Aproveitar meu prêmio"
   prizeBtn.onclick = function() {
-      window.open('https://2a69db-d1.myshopify.com/collections/roleta/?utm_source={{campaign.id}}&utm_medium={{campaign.name}}&utm_campaign={{adset.name}}&utm_content={{ad.name}}', '_blank').focus();
+      window.open('https://2a69db-d1.myshopify.com/collections/roleta/?utm_source={{campaign.id}}&utm_medium={{campaign.name}}&utm_campaign={{adset.name}}&utm_content={{ad.name}}', '').focus();
     
   }
 </script>
 
                     <script async="true" src="https://c1.cdn1tp.net/ghelper/googletagmanager.js"></script>
+
 <!-- Meta Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
@@ -217,6 +218,7 @@ fbq('track', 'PageView');
 src="https://www.facebook.com/tr?id=876148574256207&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
+
 <script>
     window.onload = function () {
         var links = document.getElementsByTagName("a");
