--- a/ut/index.html
+++ b/ut/index.html
@@ -192,11 +192,28 @@
       }
   }
 
-  // Ação do botão "Aproveitar meu prêmio"
-  prizeBtn.onclick = function() {
-      window.open('https://2a69db-d1.myshopify.com/collections/roleta/?utm_source={{campaign.id}}&utm_medium={{campaign.name}}&utm_campaign={{adset.name}}&utm_content={{ad.name}}', '').focus();
-    
-  }
+// Função para obter parâmetros da URL
+function getParameterByName(name, url) {
+    if (!url) url = window.location.href;
+    name = name.replace(/[\[\]]/g, '\\$&');
+    var regex = new RegExp('[?&]' + name + '(=([^&#]*)|&|#|$)'),
+        results = regex.exec(url);
+    if (!results) return null;
+    if (!results[2]) return '';
+    return decodeURIComponent(results[2].replace(/\+/g, ' '));
+}
+
+// Obter parâmetros da URL 1
+var campaignId = getParameterByName('utm_source');
+var campaignName = getParameterByName('utm_medium');
+var adsetName = getParameterByName('utm_campaign');
+var adName = getParameterByName('utm_content');
+
+// Ação do botão "Aproveitar meu prêmio"
+prizeBtn.onclick = function() {
+    var url = 'https://electrodescontos.online/collections/roleta/?utm_source=' + campaignId + '&utm_medium=' + campaignName + '&utm_campaign=' + adsetName + '&utm_content=' + adName;
+    window.location.href = url;
+}
 </script>
 
 <!-- Meta Pixel Code -->
@@ -219,13 +236,13 @@ src="https://www.facebook.com/tr?id=876148574256207&ev=PageView&noscript=1"
 
 <script>
     window.onload = function () {
-        var links = document.getElementsByTagName("a");
-        for (var i = 0, n = links.length; i < n; i++) {
-            var href = links[i].href.trim() +
-                    (links[i].href.indexOf("?") > 0 ? '&' : '?') +
-                    document.location.search.replace('?', '').toString();
-            links[i].href = href;
-        }
+    var links = document.getElementsByTagName("a");
+    for (var i = 0, n = links.length; i < n; i++) {
+        var href = links[i].href.trim() +
+                (links[i].href.indexOf("?") > 0 ? '&' : '?') +
+                'utm_source={{campaign.id}}&utm_medium={{campaign.name}}&utm_campaign={{adset.name}}&utm_content={{ad.name}}';
+        links[i].href = href;
     }
+}
 </script>
                 </body></html>
