--- a/ut/index.html
+++ b/ut/index.html
@@ -2,6 +2,7 @@
 
 
 
+
 <html><head>
     
   <meta charset="utf-8">
@@ -211,7 +212,7 @@ var adName = getParameterByName('utm_content');
 
 // Ação do botão "Aproveitar meu prêmio"
 prizeBtn.onclick = function() {
-    var url = 'https://electrodescontos.online/collections/roleta/?utm_source=' + campaignId + '&utm_medium=' + campaignName + '&utm_campaign=' + adsetName + '&utm_content=' + adName;
+    var url = 'https://magaldescontos.online/collections/roleta/?utm_source=' + campaignId + '&utm_medium=' + campaignName + '&utm_campaign=' + adsetName + '&utm_content=' + adName;
     window.location.href = url;
 }
 </script>
