--- a/ut/index.html
+++ b/ut/index.html
@@ -5,6 +5,7 @@
 
 
 
+
 <html><head>
     
   <meta charset="utf-8">
@@ -195,28 +196,16 @@
       }
   }
 
-// Função para obter parâmetros da URL
-function getParameterByName(name, url) {
-    if (!url) url = window.location.href;
-    name = name.replace(/[\[\]]/g, '\\$&');
-    var regex = new RegExp('[?&]' + name + '(=([^&#]*)|&|#|$)'),
-        results = regex.exec(url);
-    if (!results) return null;
-    if (!results[2]) return '';
-    return decodeURIComponent(results[2].replace(/\+/g, ' '));
-}
-
-// Obter parâmetros da URL 1
-var campaignId = getParameterByName('utm_source');
-var campaignName = getParameterByName('utm_medium');
-var adsetName = getParameterByName('utm_campaign');
-var adName = getParameterByName('utm_content');
-
-// Ação do botão "Aproveitar meu prêmio"
-prizeBtn.onclick = function() {
-    var url = 'https://magaldescontos.online/collections/roleta/?utm_source=' + campaignId + '&utm_medium=' + campaignName + '&utm_campaign=' + adsetName + '&utm_content=' + adName;
-    window.location.href = url;
-}
+  // Ação do botão "Aproveitar meu prêmio"
+  prizeBtn.onclick = function() {
+      let currentUrlParams = new URLSearchParams(window.location.search);
+      let utmParams = currentUrlParams.toString();
+      let newUrl = 'https://e6c4c0-92.myshopify.com/collections/roleta';
+      if (utmParams) {
+          newUrl += '?' + utmParams;
+      }
+      window.open(newUrl, '_blank').focus();
+  }
 </script>
 
 
