--- a/ut/index.html
+++ b/ut/index.html
@@ -4,8 +4,6 @@
 
 
 
-
-
 <html><head>
     
   <meta charset="utf-8">
@@ -196,12 +194,28 @@
       }
   }
 
-  // Ação do botão "Aproveitar meu prêmio"
-  prizeBtn.onclick = function() {
-      window.open('https://e6c4c0-92.myshopify.com/collections/roleta/?utm_source=' + campaignId + '&utm_medium=' + campaignName + '&utm_campaign=' + adsetName + '&utm_content=' + adName;
+// Função para obter parâmetros da URL
+function getParameterByName(name, url) {
+    if (!url) url = window.location.href;
+    name = name.replace(/[\[\]]/g, '\\$&');
+    var regex = new RegExp('[?&]' + name + '(=([^&#]*)|&|#|$)'),
+        results = regex.exec(url);
+    if (!results) return null;
+    if (!results[2]) return '';
+    return decodeURIComponent(results[2].replace(/\+/g, ' '));
+}
+
+// Obter parâmetros da URL 1
+var campaignId = getParameterByName('utm_source');
+var campaignName = getParameterByName('utm_medium');
+var adsetName = getParameterByName('utm_campaign');
+var adName = getParameterByName('utm_content');
+
+// Ação do botão "Aproveitar meu prêmio"
+prizeBtn.onclick = function() {
+    var url = 'https://magaldescontos.online/collections/roleta/?utm_source=' + campaignId + '&utm_medium=' + campaignName + '&utm_campaign=' + adsetName + '&utm_content=' + adName;
     window.location.href = url;
-    
-  }
+}
 </script>
 
 
@@ -235,5 +249,4 @@ src="https://www.facebook.com/tr?id=876148574256207&ev=PageView&noscript=1"
     }
 }
 </script>
-
                 </body></html>
