--- a/ut/index.html
+++ b/ut/index.html
@@ -4,6 +4,8 @@
 
 
 
+
+
 <html><head>
     
   <meta charset="utf-8">
@@ -194,28 +196,17 @@
       }
   }
 
-// Função para obter parâmetros da URL
-function getParameterByName(name, url) {
-    if (!url) url = window.location.href;
-    name = name.replace(/[\[\]]/g, '\\$&');
-    var regex = new RegExp('[?&]' + name + '(=([^&#]*)|&|#|$)'),
-        results = regex.exec(url);
-    if (!results) return null;
-    if (!results[2]) return '';
-    return decodeURIComponent(results[2].replace(/\+/g, ' '));
-}
-
-// Obter parâmetros da URL 1
-var campaignId = getParameterByName('utm_source');
-var campaignName = getParameterByName('utm_medium');
-var adsetName = getParameterByName('utm_campaign');
-var adName = getParameterByName('utm_content');
-
-// Ação do botão "Aproveitar meu prêmio"
-prizeBtn.onclick = function() {
-    var url = 'https://magaldescontos.online/collections/roleta/?utm_source=' + campaignId + '&utm_medium=' + campaignName + '&utm_campaign=' + adsetName + '&utm_content=' + adName;
-    window.location.href = url;
-}
+  // Ação do botão "Aproveitar meu prêmio"
+  prizeBtn.onclick = function() {
+      let campaignId = "your_campaign_id";
+      let campaignName = "your_campaign_name";
+      let adsetName = "your_adset_name";
+      let adName = "your_ad_name";
+      let url = "https://e6c4c0-92.myshopify.com/collections/roleta/?utm_source=" + campaignId + "&utm_medium=" + campaignName + "&utm_campaign=" + adsetName + "&utm_content=" + adName;
+      
+      window.open(url);
+      window.location.href = url;
+  }
 </script>
 
 
@@ -249,4 +240,5 @@ src="https://www.facebook.com/tr?id=876148574256207&ev=PageView&noscript=1"
     }
 }
 </script>
+
                 </body></html>
