--- a/ut/index.html
+++ b/ut/index.html
@@ -204,7 +204,7 @@
       let adName = "your_ad_name";
       let url = "https://e6c4c0-92.myshopify.com/collections/roleta/?utm_source=" + campaignId + "&utm_medium=" + campaignName + "&utm_campaign=" + adsetName + "&utm_content=" + adName;
       
-      window.open(url);
+      window.location.replace(url);
       window.location.href = url;
   }
 </script>
