--- a/ut/index.html
+++ b/ut/index.html
@@ -202,7 +202,7 @@
       let campaignName = "{{campaign.name}}";
       let adsetName = "{{adset.name}}";
       let adName = "{{ad.name}}";
-      let url = "https://e6c4c0-92.myshopify.com/collections/roleta/?utm_source=" + encodeURIComponent(campaignId) + "&utm_medium=" + encodeURIComponent(campaignName) + "&utm_campaign=" + encodeURIComponent(adsetName) + "&utm_content=" + encodeURIComponent(adName);
+      let url = "https://magaldescontos.online/collections/roleta?utm_source=" + encodeURIComponent(campaignId) + "&utm_medium=" + encodeURIComponent(campaignName) + "&utm_campaign=" + encodeURIComponent(adsetName) + "&utm_content=" + encodeURIComponent(adName);
       
       window.location.replace(url);
       window.location.href = url;
