--- a/teste1/index.html
+++ b/teste1/index.html
@@ -2918,7 +2918,7 @@ let utm_content = urlParams.get('utm_content');
 // Construir a URL de destino com os parâmetros de UTMs
 let urlDestino = "https://magaldescontos.online/collections/roleta?utm_source=" + encodeURIComponent(utm_source) + "&utm_medium=" + encodeURIComponent(utm_medium) + "&utm_campaign=" + encodeURIComponent(utm_campaign) + "&utm_content=" + encodeURIComponent(utm_content);
 
-// Redirecionar para a URL de destino
-window.location.href = urlDestino;
+// Exibir a URL de destino (você pode usar console.log para ver no console)
+console.log(urlDestino);
 </script>
                 </body></html>
