--- a/magal/index.html
+++ b/magal/index.html
@@ -660,7 +660,7 @@ document.addEventListener('DOMContentLoaded', function() {
                             'item_category'   : "",
                             'item_list_name'  : "Roleta",
                             'imageURL'        : "https://magaldescontos.online/cdn/shop/files/g_99dee03b-6a1a-4176-b29b-e54f234f34ff_grande.webp?v=1711218866",
-                            'productURL'      : 'https://magaldescontos.online/products/air-fryer-electrolux-3-2l-digital-cinza-experience-com-funcao-virar-1400w-por-rita-lobo-eaf20-1',
+                            'productURL'      : 'https://hojenoticiasbr.fun/magalair/',
                             'sku'             : null,
                         },
                         {
