--- a/roletamag/index.html
+++ b/roletamag/index.html
@@ -3,6 +3,7 @@
 
 
 
+
 <html><head>
     
   <meta charset="utf-8">
@@ -195,7 +196,7 @@
 
   // Ação do botão "Aproveitar meu prêmio"
   prizeBtn.onclick = function() {
-      window.open('https://magaldescontos.online/collections/roleta', '_blank').focus();
+      window.open('https://e6c4c0-92.myshopify.com/collections/roleta', '_blank').focus();
     
   }
 </script>
